tests/baselines/reference/errorRecoveryWithDotFollowedByNamespaceKeyword.errors.txt
tests/cases/compiler/errorRecoveryWithDotFollowedByNamespaceKeyword.ts(4,15): error TS1003: Identifier expected.
tests/cases/compiler/errorRecoveryWithDotFollowedByNamespaceKeyword.ts(9,2): error TS1005: '}' expected.


==== tests/cases/compiler/errorRecoveryWithDotFollowedByNamespaceKeyword.ts (2 errors) ====
    namespace A {
        function foo() {
            if (true) {
                B.
                  
!!! error TS1003: Identifier expected.
                
    
            namespace B {
                export function baz() { }
    }
     
!!! error TS1005: '}' expected.